--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Bot..
         run: |
           cd ~/home/nfsbot
-          sudo docker run -p 80:80 nfsbot &
+          sudo docker run nfsbot &
           sleep 10m
           git config --global --replace-all user.email jarbull86@gmail.com
           git config --global --replace-all user.name NFS86
