--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -4,9 +4,6 @@ on:
   workflow_dispatch:
   push:
 
-env:
-  GH_TOKEN: ${{secrets.GH_TOKEN}}
-
 jobs:
   procces:
     runs-on: ubuntu-latest
@@ -16,10 +13,12 @@ jobs:
           git clone https://NFS86:$GH_TOKEN@github.com/NFS-projects/NFS-UserBot ~/home/nfsbot
           cd ~/home/nfsbot
           sudo docker build . -t nfsbot
+        env:
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
       - name: Run Bot..
         run: |
           cd ~/home/nfsbot
-          sudo docker run nfsbot &
+          sudo docker run -p 80:80 nfsbot &
           sleep 10m
           git config --global --replace-all user.email jarbull86@gmail.com
           git config --global --replace-all user.name NFS86
