--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -12,13 +12,13 @@ jobs:
   procces:
     runs-on: ubuntu-latest
     container:
-      image: anggit86/userbot:beta
+      image: anggit86/manuserbot:beta
     steps:
       - name: clone source
         run: |
           git config --global user.email jarbull86@gmail.com
           git config --global user.name NFS86
-          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/GeezProjects nfsbot
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/Man-Userbot nfsbot
           cd nfsbot
           rm -rf config.env
           curl $CONFIG -o config.env
