--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --global user.email jarbull86@gmail.com
           git config --global user.name NFS86
-          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/Man-Userbot nfsbot
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b action nfsbot
           cd nfsbot
           rm -rf config.env
           curl $CONFIG_FILE_URL -o config.env
