--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --global user.email jarbull86@gmail.com
           git config --global user.name NFS86
-          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b dev nfsbot
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot nfsbot
           cd nfsbot
           curl $CONFIG_FILE_URL -o config.env
       - name: Run Bot..
@@ -26,12 +26,6 @@ jobs:
           cd nfsbot
           bash start &
           sleep 350m
-          rm -rf config.env
-          rm -rf downloads
-          rm -rfd downloads
-          git add . -f
-          git commit -asm "Bot Sesions Update | $(/bin/date)"
-          git push
       - name: Commit Auto Run.
         run: |
           git clone https://NFS86:$GH_TOKEN@github.com/NFS-projects/bot-deploy
