--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,12 +18,13 @@ jobs:
         run: |
           git config --global user.email jarbull86@gmail.com
           git config --global user.name NFS86
-          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot nfsbot
-          cd nfsbot
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot
+          cd NFS-Userbot
           curl $CONFIG_FILE_URL -o config.env
       - name: Run Bot..
         run: |
-          cd nfsbot
+          cd NFS-Userbot
+          screen -S NFS-Userbot
           bash start &
           sleep 300m
       - name: Commit Auto Run.
