--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Run Bot..
         run: |
           cd NFS-Userbot
-          screen -S NFS-Userbot
-          bash start &
+          screen -S NFS-Userbot bash start &
           sleep 300m
       - name: Commit Auto Run.
         run: |
