--- a/buddy.yaml
+++ b/buddy.yaml
@@ -10,12 +10,12 @@
   - action: "Execute: git commit --allow-empty -m \"Bot Deploy | $(/bin/date)\""
     type: "BUILD"
     working_directory: "/buddy/bot-deploy"
-    docker_image_name: "anggit86/nfsuserbot"
-    docker_image_tag: "latest"
+    docker_image_name: "library/ubuntu"
+    docker_image_tag: "22.10"
     execute_commands:
     - "apt update && apt upgrade -y"
     - "apt install git python3 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm -y"
-    - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && apt install ./google-chrome-stable_current_amd64.deb"
+    - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && apt -y install ./google-chrome-stable_current_amd64.deb"
     - "pip3 install -r requirements.txt"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
