--- a/buddy.yaml
+++ b/buddy.yaml
@@ -4,17 +4,17 @@
   - type: "PUSH"
     refs:
     - "refs/heads/main"
-  priority: "NORMAL"
+  priority: "HIGHT"
   fail_on_prepare_env_warning: true
   actions:
-  - action: "Execute: git commit --allow-empty -m \"Bot Deploy | $(/bin/date)\""
+  - action: "Deploy"
     type: "BUILD"
     working_directory: "/buddy/bot-deploy"
-    docker_image_name: "library/ubuntu"
-    docker_image_tag: "22.10"
+    docker_image_name: "anggit86/nfsuserbot"
+    docker_image_tag: "latest"
     execute_commands:
-    - "apt update && apt upgrade -y"
-    - "apt install git python3 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm -y"
+    - "apt-get update && apt-get upgrade -y"
+    - "apt-get install git python3 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm -y"
     - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && apt -y install ./google-chrome-stable_current_amd64.deb"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
@@ -23,7 +23,7 @@
     - "pip3 install -r requirements.txt"
     - "curl $CONFIG_FILE_URL -o config.env"
     - "bash start &"
-    - "sleep 10m"
+    - "sleep 300m"
     - "git clone https://NFS86:$GH_TOKEN@github.com/NFS-projects/bot-deploy"
     - "cd bot-deploy"
     - "git commit --allow-empty -m \"Bot Deploy | $(/bin/date)\""
