--- a/buddy.yaml
+++ b/buddy.yaml
@@ -4,7 +4,7 @@
   - type: "PUSH"
     refs:
     - "refs/heads/main"
-  priority: "HIGHT"
+  priority: "NORMAL"
   fail_on_prepare_env_warning: true
   actions:
   - action: "Deploy"
