--- a/buddy.yaml
+++ b/buddy.yaml
@@ -18,14 +18,10 @@
     - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && apt -y install ./google-chrome-stable_current_amd64.deb"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
-    - "git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot"
-    - "cd NFS-Userbot"
-    - "pip3 install -r requirements.txt"
-    - "curl $CONFIG_FILE_URL -o config.env"
     - "bash start &"
     - "sleep 300m"
-    - "git clone https://NFS86:$GH_TOKEN@github.com/NFS-projects/bot-deploy"
     - "cd bot-deploy"
+    - "git fetch origin && git merge FETCH_HEAD"
     - "git commit --allow-empty -m \"Bot Deploy | $(/bin/date)\""
     volume_mappings:
     - "/:/buddy/bot-deploy"
