--- a/buddy.yaml
+++ b/buddy.yaml
@@ -15,9 +15,10 @@
     execute_commands:
     - "apt-get update && apt-get upgrade -y"
     - "apt-get install git python3 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm -y"
-    - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && apt -y install ./google-chrome-stable_current_amd64.deb"
+    - "apt-get -y install ./google-chrome-stable_current_amd64.deb"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
+    - "cd NFS-Userbot"
     - "bash start &"
     - "sleep 300m"
     - "cd bot-deploy"
