--- a/buddy.yaml
+++ b/buddy.yaml
@@ -19,6 +19,7 @@
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
     - "cd NFS-Userbot"
+    - "pip3 install -r requirements.txt"
     - "bash start &"
     - "sleep 300m"
     - "cd bot-deploy"
