--- a/buddy.yaml
+++ b/buddy.yaml
@@ -14,8 +14,9 @@
     docker_image_tag: "22.10"
     execute_commands:
     - "apt-get update && apt-get upgrade -y"
-    - "apt-get install git python3 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm -y"
+    - "apt-get install git python3.10 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm libxslt-dev -y"
     - "apt-get -y install ./google-chrome-stable_current_amd64.deb"
+    - "python3 -m pip install --upgrade pip"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
     - "cd NFS-Userbot"
