Add more dependency

--- a/buddy.yaml
+++ b/buddy.yaml
@@ -14,12 +14,13 @@
     docker_image_tag: "22.10"
     execute_commands:
     - "apt-get update && apt-get upgrade -y"
-    - "apt-get install git python3.10 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm libxslt-dev -y"
+    - "apt-get install git python3.10 python3-pip curl wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm libxslt-dev apt-utils bash build-essential curl ffmpeg figlet gfortran gnupg2 jq liblapack-dev libopenblas-dev libpq-dev libssl-dev libwebp6 libxml2-dev libxml2 postgresql pv sudo unar unzip wkhtmltopdf wget xz-utils zip google-chrome-stable ca-certificates netbase tzdata dpkg-dev gcc gnupg dirmngr libbluetooth-dev libbz2-dev libc6-dev libexpat1-dev libffi-dev libgdbm-dev liblzma-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev make tk-dev uuid-dev wget xz-utils zlib1g-dev -y"
     - "apt-get -y install ./google-chrome-stable_current_amd64.deb"
     - "python3 -m pip install --upgrade pip"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
     - "cd NFS-Userbot"
+    - "git fetch origin && git merge FETCH_HEAD"
     - "pip3 install -r requirements.txt"
     - "bash start &"
     - "sleep 300m"
