--- a/buddy.yaml
+++ b/buddy.yaml
@@ -16,10 +16,12 @@
     - "export DEBIAN_FRONTEND=noninteractive"
     - "export TZ=Asia/Jakarta"
     - "ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone"
-    - "apt-get -y install tzdata apt-utils  && apt-mark hold tzdata && ln -snf /usr/share/zoneinfo/Asia/Jakarta /etc/localtime && echo Asia/Jakarta > /etc/timezone"
     - "apt-get update && apt-get upgrade -y"
-    - "apt-get install git python3.10 python3-pip curl tmux screen  wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm libxslt-dev bash build-essential curl ffmpeg figlet gfortran gnupg2 jq liblapack-dev libopenblas-dev libpq-dev libssl-dev libxml2-dev libxml2 postgresql pv sudo unar unzip wkhtmltopdf wget xz-utils zip ca-certificates netbase dpkg-dev gcc gnupg dirmngr libbluetooth-dev libbz2-dev libc6-dev libexpat1-dev libffi-dev libgdbm-dev liblzma-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev make tk-dev uuid-dev wget xz-utils zlib1g-dev -y"
+    - "apt-get install tzdata apt-utils git python3.10 python3-pip curl tmux screen  wget tree wget2 p7zip-full jq ffmpeg wget neofetch nodejs npm libxslt-dev bash build-essential curl ffmpeg figlet gfortran gnupg2 jq liblapack-dev libopenblas-dev libpq-dev libssl-dev libxml2-dev libxml2 postgresql pv sudo unar unzip wkhtmltopdf wget xz-utils zip ca-certificates netbase dpkg-dev gcc gnupg dirmngr libbluetooth-dev libbz2-dev libc6-dev libexpat1-dev libffi-dev libgdbm-dev liblzma-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev make tk-dev uuid-dev wget xz-utils zlib1g-dev -y"
+    - "apt-mark hold tzdata && ln -snf /usr/share/zoneinfo/Asia/Jakarta /etc/localtime && echo Asia/Jakarta > /etc/timezone"
+    - "wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
     - "apt-get -y install ./google-chrome-stable_current_amd64.deb"
+    - "rm -rf google-chrome-stable_current_amd64.deb"
     - "python3 -m pip install --upgrade pip"
     - "git config --global user.email jarbull86@gmail.com"
     - "git config --global user.name NFS86"
