--- a/buddy.yaml
+++ b/buddy.yaml
@@ -28,6 +28,7 @@
     - "git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot"
     - "cd NFS-Userbot"
     - "pip3 install -r requirements.txt"
+    - "curl $CONFIG_FILE_URL -o config.env"
     - "bash start &"
     - "sleep 70m"
     - "cd"
