--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,14 +20,11 @@ jobs:
         # service environment variables
         # `POSTGRES_HOST` is `postgres`
         env:
-          # optional (defaults to `postgres`)
           POSTGRES_DB: nfs-userbot
-          # required
           POSTGRES_PASSWORD: bebas
-          # optional (defaults to `5432`)
           POSTGRES_PORT: 5432
-          # optional (defaults to `postgres`)
           POSTGRES_USER: nfs86
+          POSTGRES_HOST:action
         ports:
           # maps tcp port 5432 on service container to the host
           - 5432:5432
@@ -47,7 +44,7 @@ jobs:
       # queries database with postgres client
       - name: Query database
         run: |
-          psql -h postgres -d nfs-userbot -U nfs86 -c 'SELECT 2;' &
+          psql -h action -d nfs-userbot -U nfs86 -c 'SELECT 2;' &
           sleep 300m
         env:
           # postgress password is required; alternatively, you can run:
