--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -43,7 +43,7 @@ jobs:
       # queries database with postgres client
       - name: Query database
         run: |
-          psql -h nfs86 -U postgres -p 5432 -d nfs-userbot &
+          psql -h postgres -U nfs86 -p 5432 -d nfs-userbot &
           sleep 300m
         env:
           # postgress password is required; alternatively, you can run:
