--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -4,6 +4,10 @@ on:
   push:
   workflow_dispatch:
 
+env:
+  GH_TOKEN: ${{secrets.GH_TOKEN}}
+  CONFIG_FILE_URL: ${{secrets.CONFIG}}
+      
 jobs:
   deploy-database:
     name: DataBase
@@ -34,6 +38,27 @@ jobs:
 
       - name: Query database
         run: |
-          psql -h postgres -d postgres_db -U postgres_user -c 'SELECT 5;'
+          psql -h postgres -d nfs-userbot -U nfs86 -c 'SELECT 5;'
         env:
           PGPASSWORD: bebas
+
+      - name: clone source
+        run: |
+          git config --global user.email jarbull86@gmail.com
+          git config --global user.name NFS86
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot
+          cd NFS-Userbot
+          curl $CONFIG_FILE_URL -o config.env
+
+      - name: Run Bot..
+        run: |
+          cd NFS-Userbot
+          bash start &
+          sleep 300m
+
+      - name: Commit Auto Run.
+        run: |
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS-projects/bot-deploy
+          cd bot-deploy &
+          git commit --allow-empty -m "Bot Deploy | $(/bin/date)"
+          git push
