--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,7 +1,6 @@
 name: Bot Deploy
 
 on:
-  push:
   workflow_dispatch:
 
 env:
@@ -16,7 +15,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:9.6.20
         env:
           POSTGRES_DB: nfs-userbot
           POSTGRES_PASSWORD: bebas
