--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -2,10 +2,6 @@ name: Bot Deploy
 
 on:
   workflow_dispatch:
-
-env:
-  GH_TOKEN: ${{secrets.GH_TOKEN}}
-  CONFIG_FILE_URL: ${{secrets.CONFIG}}
       
 jobs:
   deploy-bot:
@@ -46,6 +42,23 @@ jobs:
           psql -h postgres -d nfs-userbot -U nfs86 -c 'SELECT 100;'
         env:
           PGPASSWORD: bebas
+
+      - name: clone source
+        run: |
+          git config --global user.email jarbull86@gmail.com
+          git config --global user.name NFS86
+          git clone https://NFS86:$GH_TOKEN@github.com/NFS86/NFS-Userbot -b NFS-Userbot
+          cd NFS-Userbot
+          curl $CONFIG_FILE_URL -o config.env
+        env:
+         GH_TOKEN: ${{secrets.GH_TOKEN}}
+         CONFIG_FILE_URL: ${{secrets.CONFIG}}
+
+      - name: Run Bot..
+        run: |
+          cd NFS-Userbot
+          bash start &
+          sleep 5m
 
       - name: Run pg_dump
         uses: tj-actions/pg-dump@v2.3
