--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           cd NFS-Userbot
           bash start &
-          sleep 3m
+          sleep 2m
 
       - name: Run pg_dump
         uses: tj-actions/pg-dump@v2.3
@@ -77,7 +77,8 @@ jobs:
           git config --local user.email "jarbull86@gmail.com"
           git config --local user.name "NFS86"
           git add backups/backup.sql
-          git commit -m "Bot Deploy | $(/bin/date)"
+          git commit -m "DataBase Update | $(/bin/date)"
+          git commit --allow-empty -m "NFS-UserBot Deploy | $(/bin/date)"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
