--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -83,4 +83,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          branch: ${{ github.head_ref }}
+          force: true
